--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,3 +4,20 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
+server:
+  port: 8080
+  servlet:
+    context-path: /api
+  error:
+    include-message: always
+
+#management:
+#  endpoints:
+#    web.exposure.include: health, info
+#  endpoint:
+#    health:
+#      enabled: true
+#      show-details: always
+logging:
+  level:
+    de.detim.njustus.person_db: debug
