generate api from openapi

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -66,6 +66,7 @@
               "buildTarget": "person-db:build:production"
             },
             "development": {
+              "proxyConfig": "./proxy.conf.json",
               "buildTarget": "person-db:build:development"
             }
           },
