--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,10 +6,13 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "generate": "npm run generate:person-api",
+    "generate:person-api": "openapi-generator-cli generate -g typescript-angular --additional-properties=ngVersion=12,apiModulePrefix=Person -i ../persons-api.yml -o ./generated-src/person-api"
   },
   "private": true,
   "dependencies": {
+    "@openapitools/openapi-generator-cli": "^2.10.0",
     "@angular/animations": "^17.3.0",
     "@angular/cdk": "^17.3.10",
     "@angular/common": "^17.3.0",
