--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -93,7 +93,8 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.scss"
+              "src/styles.scss",
+
             ],
             "scripts": []
           }
